<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_entry_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/add_entry_subtitle"
            app:layout_constraintBottom_toTopOf="@+id/textView_second_subtitle"
            app:layout_constraintEnd_toStartOf="@+id/add_entry_editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_addEntry_title" />

        <EditText
            android:id="@+id/add_entry_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="0.0"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="@+id/textView_entry_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_entry_subtitle"
            app:layout_constraintTop_toTopOf="@+id/textView_entry_subtitle" />

        <TextView
            android:id="@+id/textView_second_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/add_second_entry_subtitle"
            app:layout_constraintEnd_toStartOf="@+id/add_second_editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_entry_subtitle" />

        <EditText
            android:id="@+id/add_second_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="0.0%"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="@+id/textView_second_subtitle"
            app:layout_constraintEnd_toEndOf="@+id/add_entry_editText"
            app:layout_constraintStart_toEndOf="@+id/textView_second_subtitle"
            app:layout_constraintStart_toStartOf="@+id/add_entry_editText"
            app:layout_constraintTop_toTopOf="@+id/textView_second_subtitle" />

        <Button
            android:id="@+id/add_entry_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/cancel_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/add_entry_button_save" />

        <Button
            android:id="@+id/add_entry_button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/add_entry_add_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/add_entry_button_cancel"
            app:layout_constraintStart_toStartOf="parent" />

        <CalendarView
            android:id="@+id/add_date_calendarView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/add_entry_button_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_second_editText" />

        <TextView
            android:id="@+id/textView_addEntry_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/add_entry_title"
            app:layout_constraintBottom_toTopOf="@+id/textView_entry_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>